<resources>
    <string name="app_name">LIMS</string>
    <string name="header_login">Enter your Credentials</string>
    <string name="label_username_login">Username</string>
    <string name="label_password_login">Password</string>
    <string name="label_login_radiobutton1">Student</string>
    <string name="label_login_radiobutton2">Instructor</string>
    <string name="label_login_radiobutton3">Admin</string>
    <string name="label_login_button">Login</string>
    <string name="label_login_register_button">Register</string>
    <string name="label_login">Are you a ?</string>
    <string name="label_register_header">Registration</string>
    <string name="label_register_button">Register</string>
    <string name="label_student_header">Welcome Student</string>
    <string name="label_student_folders">Available Folders for Submission</string>
    <string name="submit">Submit</string>
    <string name="displayName">Enter Display name</string>
    <array name="Users">
        <item>Admin</item>
        <item>Student</item>
        <item>Instructor</item>
    </array>
    <string name="imageUploadNote">Click the camera to upload image</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="createFolder">Create a Folder</string>
    <string name="allFolder">All Available Folders</string>
    <string name="folderName">Folder Name</string>
    <string name="add">Add</string>
    <string name="add_course">Add Course</string>
    <string name="label_uploaded_files">Uploaded Files</string>

</resources>