<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anandpatelak.lims_project.ProfileActivity"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="163dp"
            android:layout_height="163dp"
            android:layout_below="@+id/imgTxtView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="105dp"
            app:srcCompat="@drawable/camera" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etContactNumber"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_alignStart="@+id/imgTxtView"
            android:layout_below="@+id/imageView1"
            android:ems="10"
            android:hint="@string/displayName"
            android:inputType="text"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="95dp" />

        <TextView
            android:id="@+id/imgTxtView"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_below="@+id/progressbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:text="TextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="106dp"
            tools:text="@string/imageUploadNote" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etContactNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/submit"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="389dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
